Extract to another rewrite, fix tests